--- a/book/templates/book/search.html
+++ b/book/templates/book/search.html
@@ -6,14 +6,13 @@
   </head>
   <body>
     <h1>Search Results</h1>
-    {% if alpha_recipe_list %}
-        <ul>
-        {% for recipe in alpha_recipe_list %}
-            <li><a href="{% url 'book:detail' recipe.id %}">{{ recipe.title }}</a></li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No recipes are available.</p>
-    {% endif %}
+    <p>Showing recipes that contain: {{ ingredient_name }}</p>
+    <ul>
+      {% for recipe in recipe_list %}
+        <li>
+          {{ recipe.title }}
+        </li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
