--- a/book/templates/book/search.html
+++ b/book/templates/book/search.html
@@ -5,7 +5,7 @@
         <h2 class="jumbotron-heading">Search Results</h2>
             <div class="search mb-4"> 
                 <form>
-                    <input type="text" class="search-ingredient-input" id="search-ingredient-input" placeholder="Ex: carrot, onion, peas" name="" aria-label="Search for..." autocomplete="off" spellcheck="true">
+                    <input type="text" class="search-ingredient-input" id="search-ingredient-input" placeholder="Ex: carrot" name="" aria-label="Search for..." autocomplete="off" spellcheck="true">
                     <a href="#" class="search-icon" id="search-icon" style="background-color: #28a745;">
                         <i class="fa fa-search"></i>
                     </a>
