--- a/book/templates/book/base.html
+++ b/book/templates/book/base.html
@@ -34,8 +34,8 @@
                   <div class="col-sm-4 offset-md-1 py-4">
                     <h4 class="text-white">Contact</h4>
                     <ul class="list-unstyled">
-                      <li><a href="#" class="text-white">Find on GitHub</a></li>
-                      <li><a href="#" class="text-white">My Pinterest</a></li>
+                      <li><a href="https://github.com/dmbrannon/myRecipes" class="text-white">Find on GitHub</a></li>
+                      <li><a href="https://www.pinterest.com/danabrann/_saved/" class="text-white">My Pinterest</a></li>
                       <li><a href="mailto:dana.brannon@utexas.edu?subject=DBRecipe%20Question" class="text-white">Email me</a></li>
                     </ul>
                   </div>
