Fix homepage route, ingredient search bar, touch ups

--- a/book/templates/book/base.html
+++ b/book/templates/book/base.html
@@ -44,7 +44,7 @@
             </div>
             <div class="navbar navbar-dark box-shadow" id="backgroundColor">
               <div class="container d-flex justify-content-between">
-                <a href="#" class="navbar-brand d-flex align-items-center">
+                <a href="{% url 'book:index' %}" class="navbar-brand d-flex align-items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path fill="none" d="M9.997,13.867c-0.388,0-0.702,0.315-0.702,0.702v4.335c0,0.387,0.314,0.702,0.702,0.702
                     c0.388,0,0.702-0.315,0.702-0.702v-4.335C10.698,14.182,10.384,13.867,9.997,13.867z"></path>
                   <path fill="none" d="M9.997,6.133c0.388,0,0.702-0.315,0.702-0.702V1.096c0-0.386-0.314-0.702-0.702-0.702
