--- a/book/templates/book/detail.html
+++ b/book/templates/book/detail.html
@@ -3,7 +3,7 @@
   <section class="jumbotron text-center">
     <div class="container" id="recipe">
       <h1 class="jumbotron-heading">&#{{ recipe.icon.code }} {{ recipe.title }}</h1>
-      <small class="text-muted">Dana has tried this recipe &#11088 {{ recipe.tries }} times! <i><a href="{{ recipe.source }}" id="source">Source: {{ recipe.sourceName }}</a></i></small>
+      <small class="text-muted">Dana has tried this recipe &#11088 {{ recipe.tries }} time(s)! <i><a href="{{ recipe.source }}" id="source">Source: {{ recipe.sourceName }}</a></i></small>
       <div class="row mt-4">
           <div class="col-md-5 mt-4">
             <div class="pt-2 pb-4 pr-4 rounded" style="background-color:#f1f1f5">
