--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -3,7 +3,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Dana's Recipes</h1>
-      <p class="lead text-muted">A collection of recipes that I use pretty often, all in one place. Search by recipe name or search by typing up to three ingredients you have in the fridge.</p>
+      <p class="lead text-muted">A collection of recipes that I use pretty often, all in one place. Search by recipe name or search the name of an ingredient that you have in the fridge.</p>
       <p>
         <button type="button" class="btn btn-primary my-2" id="nameButton">Search by recipe name</button>
         <button type="button" class="btn btn-light my-2" id="ingredientButton">Search by ingredient</button>
