--- a/book/templates/book/search.html
+++ b/book/templates/book/search.html
@@ -4,12 +4,12 @@
     <div class="container">
         <h2 class="jumbotron-heading">Search Results</h2>
             <div class="search mb-4"> 
-                <form>
-                    <input type="text" class="search-ingredient-input" id="search-ingredient-input" placeholder="Ex: carrot" name="" aria-label="Search for..." autocomplete="off" spellcheck="true">
-                    <a href="#" class="search-icon" id="search-icon" style="background-color: #28a745;">
-                        <i class="fa fa-search"></i>
-                    </a>
-                </form>
+              <form action="{% url 'book:search' %}" method="get" id="submit-this">
+                <input type="text" class="search-ingredient-input" id="search-ingredient-input" placeholder="Search by ingredient..." name="ingredient_name" aria-label="Search for..." autocomplete="off" spellcheck="true">
+                <button class="search-icon" type="submit" value="submit" id="search-icon" style="background-color:#28a745">
+                  <i class="fa fa-search"></i>
+                </button>
+              </form>
             </div>
             <p>
                 <b>{{ num_recipes }} recipe(s)</b> have the following ingredient:
@@ -29,9 +29,9 @@
               <div class="card mb-4 box-shadow">
                 <a href="#">
                   <div class="card-body">
-                      <div class="mr-3" style="font-size:20px;float:left">&#128031</div>
+                      <div class="mr-3" style="font-size:20px;float:left">&#{{ recipe.icon.code }}</div>
                       <span style="font-size:1.25em">{{ recipe.title }}</span>
-                      <small class="text-muted float-right mt-2 mb-2">&#11088 1</small> 
+                      <small class="text-muted float-right mt-2 mb-2">&#11088 {{ recipe.tries }}</small> 
                   </div>
                 </a>
               </div>
