Add Dana user privileges for clicking Try recipe button

--- a/book/templates/book/base.html
+++ b/book/templates/book/base.html
@@ -79,6 +79,9 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
               </div>
+              {% if user.is_authenticated %}
+                <span class="float-right" style="color:white;font-style:italic">Hi, Dana</span>
+              {% endif %}
             </div>
         </header>
 
