--- a/book/templates/book/detail.html
+++ b/book/templates/book/detail.html
@@ -35,9 +35,35 @@
               {% for note in notes %}
                 <p class="card-text"><b>{{ note.date_created }}: </b>{{ note.text }}</p>
               {% endfor %}
-              <a href="#" class="btn btn-primary">Try Recipe &#11088</a>
+              {% if user.is_authenticated %}
+                <a href="#" class="btn btn-primary">Try Recipe &#11088</a>
+              {% else %}
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginRequiredModal">
+                  Try Recipe &#11088
+                </button>
+              {% endif %}
             </div>
           </div>
     </div>
-  </div>    
+  </div> 
+  
+  <!-- Modal -->
+  <div class="modal fade" id="loginRequiredModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-danger" id="loginRequiredModalLabel">Error</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Only Dana can say she tried a recipe. Sorry!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
