--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -17,11 +17,18 @@
               </button>
           </form>
       </div>
+        {% if messages %}
+          {% for message in messages %}
+            <div class="mt-3 alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          {% endfor %}
+        {% endif %}
     </div>
   </section>
-  {% if error_message %}
-      <p><strong>{{ error_message }}</strong></p>
-  {% endif %}
 
   <div class="album py-5" id="backgroundColor">
       <div class="container">
